[ci skip] 34870527467 https://github.com/tkoyama010/scientific-python-lectures-translations/actions/runs/12497659071/job/34870527467

--- a/locale/ja/LC_MESSAGES/guide.po
+++ b/locale/ja/LC_MESSAGES/guide.po
@@ -329,7 +329,7 @@ msgstr ""
 
 #: ../../scientific-python-lectures/guide/index.rst-1
 msgid "Example:"
-msgstr ""
+msgstr "例:"
 
 #: ../../scientific-python-lectures/guide/index.rst:140
 msgid ""
