--- a/locale/ja/LC_MESSAGES/CHANGES.po
+++ b/locale/ja/LC_MESSAGES/CHANGES.po
@@ -3,6 +3,9 @@
 # This file is distributed under the same license as the Scientific Python Lectures package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 # 
+# Translators:
+# Tetsuo Koyama <tkoyama010@gmail.com>, 2024
+# 
 #, fuzzy
 msgid ""
 msgstr ""
@@ -10,6 +13,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2024-11-27 19:17+0000\n"
 "PO-Revision-Date: 2024-11-27 19:15+0000\n"
+"Last-Translator: Tetsuo Koyama <tkoyama010@gmail.com>, 2024\n"
 "Language-Team: Japanese (https://app.transifex.com/tkoyama010/teams/202028/ja/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -19,15 +23,15 @@ msgstr ""
 
 #: ../../scientific-python-lectures/CHANGES.rst:2
 msgid "What's new"
-msgstr ""
+msgstr "新着情報"
 
 #: ../../scientific-python-lectures/CHANGES.rst:5
 msgid "Release 2024.1 (April 2024)"
-msgstr ""
+msgstr "リリース2024.1 (2024年4月)"
 
 #: ../../scientific-python-lectures/CHANGES.rst:7
 msgid "Python 3.10, 3.11, 3.12"
-msgstr ""
+msgstr "Python 3.10, 3.11, 3.12"
 
 #: ../../scientific-python-lectures/CHANGES.rst:9
 msgid "Renamed Scientific Python Lectures"
