--- a/locale/ja/LC_MESSAGES/AUTHORS.po
+++ b/locale/ja/LC_MESSAGES/AUTHORS.po
@@ -1,19 +1,19 @@
 # SOME DESCRIPTIVE TITLE.
-# Copyright (C) 2024
+# Copyright (C) 2025
 # This file is distributed under the same license as the Scientific Python Lectures package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 # 
 # Translators:
-# Tetsuo Koyama <tkoyama010@gmail.com>, 2024
+# Tetsuo Koyama <tkoyama010@gmail.com>, 2025
 # 
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: Scientific Python Lectures 2024.2rc0.dev0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-11-27 19:17+0000\n"
+"POT-Creation-Date: 2025-01-01 00:13+0000\n"
 "PO-Revision-Date: 2024-11-27 19:15+0000\n"
-"Last-Translator: Tetsuo Koyama <tkoyama010@gmail.com>, 2024\n"
+"Last-Translator: Tetsuo Koyama <tkoyama010@gmail.com>, 2025\n"
 "Language-Team: Japanese (https://app.transifex.com/tkoyama010/teams/202028/ja/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -63,11 +63,11 @@ msgstr "Stéfan van der Walt"
 
 #: ../../scientific-python-lectures/AUTHORS.rst:22
 msgid "Chapter authors"
-msgstr "Chapter authors"
+msgstr "章執筆陣"
 
 #: ../../scientific-python-lectures/AUTHORS.rst:24
 msgid "Listed by alphabetical order."
-msgstr "Listed by alphabetical order."
+msgstr "アルファベット順。"
 
 #: ../../scientific-python-lectures/AUTHORS.rst:26
 msgid "Christopher Burns"
@@ -122,15 +122,15 @@ msgstr "Zbigniew Jędrzejewski-Szmek"
 
 #: ../../scientific-python-lectures/AUTHORS.rst:52
 msgid "Valentin Haenel (editor from 2011 to 2015)"
-msgstr "Valentin Haenel (editor from 2011 to 2015)"
+msgstr "Valentin Haenel (2011年から2015年まで編集者)"
 
 #: ../../scientific-python-lectures/AUTHORS.rst:55
 msgid "Additional Contributions"
-msgstr "Additional Contributions"
+msgstr "追加貢献"
 
 #: ../../scientific-python-lectures/AUTHORS.rst:57
 msgid "Listed by alphabetical order"
-msgstr "Listed by alphabetical order"
+msgstr "アルファベット順"
 
 #: ../../scientific-python-lectures/AUTHORS.rst:59
 msgid "Osayd Abdu"
